Revert "Adwaita: avoid clipping menu/popover shadow"
There are big side effects to adding padding around all menus and popovers.

https://gitlab.gnome.org/GNOME/gtk/-/issues/1987#note_963889

This reverts commit d266bd62deaa5752ae79fe055696a9e1e411de2f.

--- a/gtk/theme/Adwaita/_common.scss
+++ b/gtk/theme/Adwaita/_common.scss
@@ -4141,7 +4141,7 @@ popover.entry-completion > contents {
 $_menu-padding: 12px;
 
 popover.menu {
-  padding: 2px 2px 2px 4px; //allow some shadow. #1987
+  padding: 0;
 
   box.inline-buttons {
     padding: 0 $_menu-padding;
